--- a/menuprogra.html
+++ b/menuprogra.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Menú de URLs</title>
+  <meta charset="UTF-8">
+  <title>Menú</title>
   <style>
     body {
       background-color: #3498db;
@@ -40,7 +41,7 @@
 </head>
 <body>
 
-<h1>Menú de URLs</h1>
+<h1>Menú de Actividades</h1>
 
 <table>
   <tr>
